feat(game): implement welcome screen (MVP1-S1)

--- a/static/index.html
+++ b/static/index.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World App</title>
+    <title>Snake and Ladder</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello World</h1>
-    <p id="js-message"></p>
+    <div id="app">
+        <div id="welcome-screen">
+            <h1>Snake and Ladder</h1>
+            <button id="play-button">Play</button>
+        </div>
+        <div id="game-screen" class="hidden">
+            <!-- Game board and controls will go here -->
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
