feat(game): implement game board (MVP1-S2)

--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
             <button id="play-button">Play</button>
         </div>
         <div id="game-screen" class="hidden">
-            <!-- Game board and controls will go here -->
+            <div id="game-board"></div>
         </div>
     </div>
     <script src="script.js"></script>
