--- a/static/index.html
+++ b/static/index.html
@@ -14,6 +14,7 @@
         </div>
         <div id="game-screen" class="hidden">
             <div id="game-board"></div>
+            <div id="turn-indicator"></div>
         </div>
     </div>
     <script src="script.js"></script>
