--- a/static/index.html
+++ b/static/index.html
@@ -15,6 +15,7 @@
         <div id="game-screen" class="hidden">
             <div id="game-board"></div>
             <div id="turn-indicator"></div>
+            <button id="roll-dice-button">Roll Dice</button>
         </div>
     </div>
     <script src="script.js"></script>
