feat(game): implement snakes and ladders (MVP1-S8)

--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,9 @@
             <button id="play-button">Play</button>
         </div>
         <div id="game-screen" class="hidden">
-            <div id="game-board"></div>
+            <div id="game-board">
+                <svg id="game-lines" class="game-lines-svg"></svg>
+            </div>
             <div id="turn-indicator"></div>
             <button id="roll-dice-button">Roll Dice</button>
         </div>
