--- a/static/index.html
+++ b/static/index.html
@@ -19,6 +19,10 @@
             <div id="turn-indicator"></div>
             <button id="roll-dice-button">Roll Dice</button>
         </div>
+
+        <div id="winning-celebration" class="hidden">
+            <h1>Congratulations! You Won!</h1>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
