feat(game): implement play again functionality (MVP1-S11)

--- a/static/index.html
+++ b/static/index.html
@@ -22,6 +22,7 @@
 
         <div id="winning-celebration" class="hidden">
             <h1>Congratulations! You Won!</h1>
+            <button id="play-again-button">Play Again</button>
         </div>
     </div>
     <script src="script.js"></script>
